--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,9 @@
-:root
+:root{
+    --primary-text-color:#FFFFFF;
+    --title-text-color:#212121;
+    --subtitle-text-color:#757575;
+    --link-text-color:#2196F3;
+}
 
 
 
@@ -7,93 +12,97 @@ ul{
 }
 
 
-/* Колір фона Хедера */
+/* Хедер */
 
+/* Фон хедера */
 .header-phone{
-    background-color:#FFFFFF; ;
+    background-color:#FFFFFF; 
 }
 
-/* Кольори Хедера  */
-
-
-/* Синій */
+/* Колір логотипу */
 .logo{
-    color: #2196F3;;
+    color: var(--link-text-color);
 }
 
-
-/* Чорний */
+/* Кольори ссилок хедера */
 .header-nav a{
-    color: #212121;;
+    color: var(--title-text-color);
 }
 
 .header-nav a:hover, 
 .header-nav a:focus {
-    color: #2196F3;
+    color: var(--link-text-color);
 }
 
-/* Сірий */
 .header-nav-mail{
-    color:#757575;
+    color:var(--subtitle-text-color);
 }
 
 .header-nav-mail:hover,
 .header-nav-mail:focus {
-    color: #2196F3;
+    color: var(--link-text-color);
 }
 
 
-
 .header-nav-tel{
-    color:#757575
+    color:var(--subtitle-text-color);
 }
 
 .header-nav-tel:hover,
 .header-nav-tel:focus {
-    color: #2196F3;
+    color: var(--link-text-color);
 }
 
 
-
-
-
-
-
-
-/* Основний колір(Чорний) */
-
+/* Тіло сайту */
+/* Заголовки */
 .section-title{
-    color: #212121;
+    color: var(--title-text-color);
 }
 
 .title-text{
-    color: #212121;
+    color: var(--title-text-color);
 }
 
 .subtitle-text{
-    color: #757575;
+    color: var(--subtitle-text-color);
 }
 
 .title-name{
-    color: #212121;
+    color: var(--title-text-color);
 }
 
+/* Колір головного заголовку(Ефективні...)*/
+.section-title-with-a-button {
+    color: var(--primary-text-color)
+}
 
-
-/* Вторинний колір */
-
+/* Колір фону з кнопкою */
 .section-phone-with-a-button{
-    background-color: #2F303A;;
+    background-color: #2F303A;
 }
 
+/* Колір фону Наша команда */
 .section-phone-our-team{
     background-color: #F5F4FA;
 }
 
-.section-title-with-a-button{
-    color:#FFFFFF;;
+/* Колір заголовків посад команди */
+.subtitle-specialty{
+    color: var(--subtitle-text-color);
 }
 
-.subtitle-specialty{
-    color: #757575;
+
+/* Button */
+
+.button{
+    color: #FFFFFF;
+    background-color: #2196F3;
+}
+
+
+/* Link */
+
+.header-nav .link.current{
+    color: var(--link-text-color); 
 }
